// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SeverityPill renders P1 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 iyGSLh"
    type="P1"
  >
    P1
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P2 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 iDlxqz"
    type="P2"
  >
    P2
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P3 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 ffqUYw"
    type="P3"
  >
    P3
  </span>
</DocumentFragment>
`;

exports[`SeverityPill renders P4 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 GeDOV"
    type="P4"
  >
    P4
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders negative trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 iDlxqz"
    type="negative"
  >
    -123
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders no trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 bZzigW"
    type="none"
  >
    0
  </span>
</DocumentFragment>
`;

exports[`TrendPill renders positive trend 1`] = `
<DocumentFragment>
  <span
    class="styledComponents__Pill-sc-j61ge1-0 MkCXn"
    type="positive"
  >
    123
  </span>
</DocumentFragment>
`;
